--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,19 @@
-
+table{
+	border-collapse:collapse;
+}
+th{
+	width:100px;
+	text-align:start;
+	border:1px solid black;
+	background-color:deeppink;
+}
+td{
+	width:100px;
+	border:1px solid black;
+	background-color:blue;
+	text-align:end;
+}
+td:nth-child(1){
+	text-align:start;
+}
 /* Your CSS Code here. */
